Fix: content overflow

--- a/src/scss/partials/_account.scss
+++ b/src/scss/partials/_account.scss
@@ -4,6 +4,7 @@
     grid-template-rows: max-content auto;
     padding: 0 $default-spacing;
     background-color: rgba($primary-color, 0.5);
+    overflow: auto;
 
     .top-section
     {
